--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,6 @@ section.about-me .container-about-me {
   background-image: linear-gradient(white, white), linear-gradient(to right, #FD749B -13.56%, #281AC8 158.3%);
   background-origin: border-box;
   background-clip: content-box, border-box;
-  margin: 4em 0 4em 0;
 }
 
 section.about-me .container-about-me img {
@@ -145,6 +144,9 @@ section.about-me .container-about-me p {
   }
   .container-right {
     display: none;
+  }
+  section.about-me .container-about-me {
+    margin: -4em 0 4em 0;
   }
 }
 
