--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,33 @@ body {
   display: none;
 }
 
+.mobile-navigation {
+  display: block;
+  position: fixed;
+  z-index: 998;
+  width: 66%;
+  right: 0;
+  top: 0;
+  background: #ffffff;
+  height: 100vh;
+  padding: 1em;
+}
+
+.mobile-navigation ul {
+  display: block;
+}
+
+.mobile-navigation ul li {
+  list-style: none;
+  padding-bottom: 3em;
+}
+
+.mobile-navigation ul li a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+}
+
 .navbar {
   background: none;
   padding: 1em;
@@ -79,7 +106,6 @@ section.about-me {
 }
 
 section.about-me .container-about-me {
-  width: 50%;
   height: 75vh;
   display: block;
   text-align: center;
@@ -128,34 +154,14 @@ section.portfolio .container-portfolio h1 {
   .container .navigation {
     display: none;
   }
-  .container .navigation ul {
-    display: block;
-  }
-  .container .navigation ul li {
-    list-style: none;
-    padding-bottom: 3em;
-  }
-  .container .navigation ul li a {
-    text-decoration: none;
-    color: black;
-    font-weight: bold;
-  }
-  .container .show-nav {
-    display: block;
-    position: fixed;
-    z-index: 998;
-    width: 66%;
-    right: 0;
-    top: 0;
-    background: #ffffff;
-    height: 100vh;
-    padding: 1em;
-  }
   .container-right {
     display: none;
   }
   section.about-me .container-about-me {
     margin: -4em 0 4em 0;
+  }
+  .container-about-me {
+    width: 80%;
   }
 }
 
@@ -187,5 +193,8 @@ section.portfolio .container-portfolio h1 {
   }
   section.about-me .container-about-me {
     margin: 0em 0 4em 0;
+  }
+  .container-about-me {
+    width: 50%;
   }
 }
