--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,31 @@ body {
     display: none;
 }
 
+.mobile-navigation {
+    display: block;
+    position: fixed;
+    z-index: 998;
+    width: 66%;
+    right: 0;
+    top: 0;
+    background: #ffffff;
+    height: 100vh;
+    padding: 1em;
+
+    ul {
+        display: block;
+        li {
+            list-style: none;
+            padding-bottom: 3em;
+            a {
+                text-decoration: none;
+                color: black;
+                font-weight: bold;
+            }
+        }
+    }
+}
+
 .navbar {
     background: none;
     padding: 1em;
@@ -79,7 +104,7 @@ section.about-me {
     display: flex;
     justify-content: center;
     .container-about-me {
-        width: 50%;
+        // width: 50%;
         height: 75vh;
         display: block;
         text-align: center;
@@ -119,7 +144,7 @@ section.portfolio {
     }
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) { //mobile screen
     .container {
         display: flex;
         place-content: space-between;
@@ -129,29 +154,6 @@ section.portfolio {
         }
         .navigation {
             display: none;
-            ul {
-                display: block;
-                li {
-                    list-style: none;
-                    padding-bottom: 3em;
-                    a {
-                        text-decoration: none;
-                        color: black;
-                        font-weight: bold;
-                    }
-                }
-            }
-        }
-        .show-nav{
-            display: block;
-            position: fixed;
-            z-index: 998;
-            width: 66%;
-            right: 0;
-            top: 0;
-            background: #ffffff;
-            height: 100vh;
-            padding: 1em;
         }
     }
 
@@ -165,9 +167,13 @@ section.portfolio {
         }
     }
 
+    .container-about-me {
+        width: 80%;
+    }
+
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) { //bigger than mobile
     .container {
         display: flex;
         img {
@@ -202,5 +208,8 @@ section.portfolio {
             margin: 0em 0 4em 0;
         }
     }
-}
 
+    .container-about-me {
+        width: 50%;
+    }
+}
