--- a/css/main.css
+++ b/css/main.css
@@ -89,10 +89,14 @@ section.hero div.container-left h2 {
 section.hero div.container-left a {
   color: white;
   text-decoration: none;
-  background: linear-gradient(178.18deg, #FD749B -13.56%, #281AC8 158.3%);
+  background: linear-gradient(178.18deg, #fd4c7e -13.56%, #1c0cc7 158.3%);
   border-radius: 100px;
   padding: 1em;
   font-weight: bold;
+}
+
+section.hero div.container-left a:hover {
+  background: linear-gradient(178.18deg, #ff7199 -13.56%, #3a2ec7 158.3%);
 }
 
 section.hero div.container-right {
@@ -142,6 +146,36 @@ section.portfolio .container-portfolio h1 {
   font-size: 4em;
 }
 
+section.portfolio .container-portfolio .korni .korni-left {
+  background: #f1f1f1;
+  border-radius: 25px;
+}
+
+section.portfolio .container-portfolio .korni .korni-left p {
+  margin-bottom: 2em;
+}
+
+section.portfolio .container-portfolio .korni .korni-left a {
+  color: white;
+  text-decoration: none;
+  background: linear-gradient(178.18deg, #fd4c7e -13.56%, #1c0cc7 158.3%);
+  border-radius: 100px;
+  padding: 1em 2em 1em 2em;
+  font-weight: bold;
+}
+
+section.portfolio .container-portfolio .korni .korni-left a:hover {
+  background: linear-gradient(178.18deg, #ff7199 -13.56%, #3a2ec7 158.3%);
+}
+
+section.portfolio .container-portfolio .korni .korni-right {
+  border: solid 1px #f1f1f1;
+  border-radius: 25px;
+  background: linear-gradient(178.18deg, #ff7199 -13.56%, #3a2ec7 158.3%);
+  display: flex;
+  justify-content: center;
+}
+
 @media only screen and (max-width: 768px) {
   .container {
     display: flex;
@@ -162,6 +196,19 @@ section.portfolio .container-portfolio h1 {
   }
   .container-about-me {
     width: 80%;
+  }
+  .korni {
+    display: block;
+  }
+  .korni .korni-left {
+    width: 80%;
+    height: 50vh;
+    margin: 0 auto;
+  }
+  .korni .korni-right {
+    width: 80%;
+    height: 50vh;
+    margin: 0 auto 4em auto;
   }
 }
 
@@ -196,5 +243,18 @@ section.portfolio .container-portfolio h1 {
   }
   .container-about-me {
     width: 50%;
+  }
+  .korni {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4em;
+  }
+  .korni .korni-left {
+    width: 25%;
+    height: 50vh;
+  }
+  .korni .korni-right {
+    width: 25%;
+    height: 50vh;
   }
 }
