--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,12 @@ section.portfolio .container-portfolio .korni .korni-right {
   background: linear-gradient(178.18deg, #ff7199 -13.56%, #3a2ec7 158.3%);
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+section.portfolio .container-portfolio .korni .korni-right img {
+  width: 70%;
+  height: 70%;
 }
 
 @media only screen and (max-width: 768px) {
@@ -250,11 +256,11 @@ section.portfolio .container-portfolio .korni .korni-right {
     margin-bottom: 4em;
   }
   .korni .korni-left {
-    width: 25%;
-    height: 50vh;
+    width: 40%;
+    height: 70vh;
   }
   .korni .korni-right {
-    width: 25%;
-    height: 50vh;
+    width: 40%;
+    height: 70vh;
   }
 }
