--- a/css/main.scss
+++ b/css/main.scss
@@ -165,7 +165,7 @@ section.portfolio {
             .korni-right {
                 border: solid 1px rgb(241, 241, 241);
                 border-radius: 25px;
-                background: linear-gradient(178.18deg, #ff7199 -13.56%, #3a2ec7 158.3%);
+                background: linear-gradient(178.18deg, #fda5be -13.56%, #877eeb 158.3%);
                 display: flex;
                 justify-content: center;
                 align-items: center;
