--- a/css/main.css
+++ b/css/main.css
@@ -171,7 +171,7 @@ section.portfolio .container-portfolio .korni .korni-left a:hover {
 section.portfolio .container-portfolio .korni .korni-right {
   border: solid 1px #f1f1f1;
   border-radius: 25px;
-  background: linear-gradient(178.18deg, #ff7199 -13.56%, #3a2ec7 158.3%);
+  background: linear-gradient(178.18deg, #fda5be -13.56%, #877eeb 158.3%);
   display: flex;
   justify-content: center;
   align-items: center;
