--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@ section.about-me {
 }
 
 section.about-me .container-about-me {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   height: 75vh;
   display: block;
   text-align: center;
@@ -148,7 +149,7 @@ section.portfolio .container-portfolio h1 {
 
 section.portfolio .container-portfolio .korni .korni-left {
   background: #f1f1f1;
-  border-radius: 25px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 section.portfolio .container-portfolio .korni .korni-left p {
@@ -169,12 +170,11 @@ section.portfolio .container-portfolio .korni .korni-left a:hover {
 }
 
 section.portfolio .container-portfolio .korni .korni-right {
-  border: solid 1px #f1f1f1;
-  border-radius: 25px;
   background: linear-gradient(178.18deg, #fda5be -13.56%, #877eeb 158.3%);
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 section.portfolio .container-portfolio .korni .korni-right img {
@@ -258,9 +258,13 @@ section.portfolio .container-portfolio .korni .korni-right img {
   .korni .korni-left {
     width: 40%;
     height: 70vh;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
   }
   .korni .korni-right {
     width: 40%;
     height: 70vh;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
   }
 }
