--- a/css/main.scss
+++ b/css/main.scss
@@ -107,6 +107,7 @@ section.about-me {
     display: flex;
     justify-content: center;
     .container-about-me {
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         height: 75vh;
         display: block;
         text-align: center;
@@ -146,7 +147,8 @@ section.portfolio {
         .korni {
             .korni-left {
                 background: rgb(241, 241, 241);
-                border-radius: 25px;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                // box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
                 p {
                     margin-bottom: 2em;
                 }
@@ -163,13 +165,12 @@ section.portfolio {
                 }
             }
             .korni-right {
-                border: solid 1px rgb(241, 241, 241);
-                border-radius: 25px;
                 background: linear-gradient(178.18deg, #fda5be -13.56%, #877eeb 158.3%);
                 display: flex;
                 justify-content: center;
                 align-items: center;
-
+                // box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
                 img {
                     width: 70%;
                     height: 70%;
@@ -271,10 +272,14 @@ section.portfolio {
         .korni-left {
             width: 40%;
             height: 70vh;
+            border-top-left-radius: 25px;
+            border-bottom-left-radius: 25px;
         }
         .korni-right {
             width: 40%;
             height: 70vh;
+            border-top-right-radius: 25px;
+            border-bottom-right-radius: 25px;
         }
     }
 
