added next project

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;400;600&display=swap");
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: 'Montserrat Alternates';
@@ -182,6 +186,41 @@ section.portfolio .container-portfolio .korni .korni-right img {
   height: 70%;
 }
 
+section.portfolio .container-portfolio .training .training-left {
+  background: linear-gradient(178.18deg, #3b4efc -13.56%, #c5c0ff 158.3%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+section.portfolio .container-portfolio .training .training-left img {
+  width: 70%;
+  height: 70%;
+}
+
+section.portfolio .container-portfolio .training .training-right {
+  background: #f1f1f1;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+section.portfolio .container-portfolio .training .training-right p {
+  margin-bottom: 2em;
+}
+
+section.portfolio .container-portfolio .training .training-right a {
+  color: white;
+  text-decoration: none;
+  background: linear-gradient(178.18deg, #fd4c7e -13.56%, #1c0cc7 158.3%);
+  border-radius: 100px;
+  padding: 1em 2em 1em 2em;
+  font-weight: bold;
+}
+
+section.portfolio .container-portfolio .training .training-right a:hover {
+  background: linear-gradient(178.18deg, #ff7199 -13.56%, #3a2ec7 158.3%);
+}
+
 @media only screen and (max-width: 768px) {
   .container {
     display: flex;
@@ -210,11 +249,38 @@ section.portfolio .container-portfolio .korni .korni-right img {
     width: 80%;
     height: 50vh;
     margin: 0 auto;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+  }
+  .korni .korni-left h3 {
+    padding-top: 2em;
   }
   .korni .korni-right {
     width: 80%;
     height: 50vh;
     margin: 0 auto 4em auto;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
+  .training {
+    display: block;
+  }
+  .training .training-left {
+    width: 80%;
+    height: 50vh;
+    margin: 0 auto;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+  }
+  .training .training-right {
+    width: 80%;
+    height: 50vh;
+    margin: -1em auto 0 auto;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
+  .training .training-right h3 {
+    padding-top: 2em;
   }
 }
 
@@ -261,10 +327,39 @@ section.portfolio .container-portfolio .korni .korni-right img {
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
   }
+  .korni .korni-left h3 {
+    margin: 2em 0 2em 0;
+  }
+  .korni .korni-left p {
+    padding: 2em;
+  }
   .korni .korni-right {
     width: 40%;
     height: 70vh;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
+  }
+  .training {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4em;
+  }
+  .training .training-left {
+    width: 40%;
+    height: 70vh;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+  }
+  .training .training-right {
+    width: 40%;
+    height: 70vh;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+  }
+  .training .training-right h3 {
+    margin: 2em 0 2em 0;
+  }
+  .training .training-right p {
+    padding: 2em;
   }
 }
