--- a/css/main.scss
+++ b/css/main.scss
@@ -250,7 +250,7 @@ section.stack {
     }
 }
 
-section.contact {
+section.footer {
     background-image: url('../assets/background_bottom.png');
     background-repeat: no-repeat;
     background-position: top;
